# emb

./: .gitignore  README.md  pyproject.toml
.claude/: current-session-id
.claude/overviews/: source-overview.md
.github/workflows/: publish.yml
src/emb/: __init__.py  cache.py  cag.py  chunking.py  cli.py  contextualize.py  embed.py  index.py  io.py  schema.py  search.py
tests/: test_cache.py  test_chunking.py  test_cli.py  test_contextualize.py  test_embed.py  test_index.py  test_io.py  test_multiscale.py  test_schema.py  test_search.py
